# mcp-server

./: README.md  pyproject.toml
mcp_server/: __init__.py  __main__.py  server.py
mcp_server/core/: __init__.py  registry.py  server.py  tool.py
mcp_server/tools/: __init__.py
mcp_server/tools/github/: __init__.py  build_logs_loader.py  build_logs_tools.py  client.py  commits.py  create_update_binary.py  delete_file.py  file_ops.py  file_sha_ops.py  files.py  workflows.py
