[project]
name = "mcp-github-server"
version = "0.3.0"
description = "Modular MCP HTTP server for GitHub API with auto-discovered tools"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
